# create-python-project

./: MANIFEST.in  README.md  pyproject.toml
src/create_python_project/: main.py  pyproject-template.toml
src/mkpypac/: main.py
