[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "create-python-project"
version = "0.0.1"
authors = [
  { name="Graphity" },
]
description = "Python package boilerplate"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Graphity/create-python-project"
"Bug Tracker" = "https://github.com/Graphity/create-python-project/issues"

[project.scripts]
btu-fetch = "create_python_project.main:create_python_project"